1.9.8 - 2018-XX-XX

  1. Expose `FileChecksum` in `GoogleHadoopFileSystem` via property:

       fs.gs.checksum.type (default: NONE)

     Valid property values: `NONE`, `CRC32C`, `MD5`.

     CRC32c checksum is compatible with HDFS-13056.


1.9.7 - 2018-09-20

  1. Add an option to provide credentials directly in Hadoop Configuration,
     without having to place a file on every node, or associating service
     accounts with GCE VMs.

       fs.gs.auth.service.account.private.key.id
       fs.gs.auth.service.account.private.key

  2. Add an option to specify max bytes rewritten per rewrite request when
     `fs.gs.copy.with.rewrite.enable` is set to `true`:

       fs.gs.rewrite.max.bytes.per.call (default: 536870912)

     Even though GCS does not require this parameter for rewrite requests,
     rewrite requests are flaky without it.


1.9.6 - 2018-08-30

  1. Change default values for GCS batch/directory operations properties to
     improve performance:

       fs.gs.copy.max.requests.per.batch (default: 1 -> 15)
       fs.gs.copy.batch.threads (default: 50 -> 15)
       fs.gs.max.requests.per.batch (default: 25 -> 15)
       fs.gs.batch.threads (default: 25 -> 15)

  2. Migrate logging to Google Flogger.

     To configure Log4j as a Flogger backend set `flogger.backend_factory`
     system property to `com.google.common.flogger.backend.log4j.Log4jBackendFactory#getInstance`
     or `com.google.cloud.hadoop.repackaged.gcs.com.google.common.flogger.backend.log4j.Log4jBackendFactory#getInstance`
     if using shaded jar.

     For example:

       java -Dflogger.backend_factory=com.google.common.flogger.backend.log4j.Log4jBackendFactory#getInstance ...

  3. Delete read buffer in `GoogleHadoopFSInputStream` class and remove property
     that enables it:

       fs.gs.inputstream.internalbuffer.enable (default: false)

  4. Disable read buffer in `GoogleCloudStorageReadChannel` by default because
     it does not provide significant performance benefits:
